--- a/src/TaskManager.Migrator/appsettings.json
+++ b/src/TaskManager.Migrator/appsettings.json
@@ -1,4 +1,4 @@
 {
-  "DbConnectionString": "",
+  "DbConnectionString": "Server=localhost,1033;Database=TaskManager;User ID=sa;Password=Sqlserver123$;MultipleActiveResultSets=true;",
   "DbSchema": "dbo"
 }
