--- a/src/TaskManager.WebApi/appsettings.json
+++ b/src/TaskManager.WebApi/appsettings.json
@@ -12,13 +12,15 @@
   "AllowedHosts": "*",
   "Infrastructure": {
     "Seq": {
-      "Url": ""
+      "Url": "http://localhost:5342"
     },
     "Jaeger": {
-      "Host": "",
-      "Port": 0
+      "Host": "localhost",
+      "Port": 6831,
+      "ServiceName": "Task Manager API",
+      "ServiceVersion": "1.0.0"
     },
-    "DbConnectionString": "",
+    "DbConnectionString": "Server=localhost,1033;Database=TaskManager;User ID=sa;Password=Sqlserver123$;MultipleActiveResultSets=true;",
     "Cors": {
       "localhost": [
         "http://localhost:5000",
@@ -26,9 +28,11 @@
       ]
     },
     "DbSchema": "dbo",
-    "RebusSettings": {
-      "ConnectionString": "",
+    "Rebus": {
       "Queue": "taskmanager.queue"
+    },
+    "RabbitMQ": {
+      "ConnectionString": "amqp://admin:Rabbitmq123$@localhost:5671"
     }
   }
 }
