--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -1,29 +1,41 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.4.0" />
+	  <None Remove="C:\Users\DELL\.nuget\packages\microsoft.applicationinsights.profiler.aspnetcore\2.5.0\contentFiles\any\netstandard2.1\ServiceProfiler\TraceUpload.zip" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.5.1" />
+		<PackageReference Include="loggly-csharp" Version="4.6.1.116" />
+		<PackageReference Include="Microsoft.ApplicationInsights.Profiler.AspNetCore" Version="2.5.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
 		<PackageReference Include="Microsoft.Extensions.Localization" Version="6.0.3" />
-		<PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.1.0" />
+		<PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.3.2" />
 		<PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc9.1" />
 		<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc9.1" />
 		<PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc9.1" />
 		<PackageReference Include="OpenTelemetry.Instrumentation.SqlClient" Version="1.0.0-rc9.1" />
-		<PackageReference Include="Rebus" Version="6.6.2" />
-		<PackageReference Include="Rebus.RabbitMq" Version="7.3.5" />
+		<PackageReference Include="Rebus" Version="7.0.0" />
+		<PackageReference Include="Rebus.AzureServiceBus" Version="9.3.1" />
+		<PackageReference Include="Rebus.RabbitMq" Version="8.0.0" />
 		<PackageReference Include="Rebus.Serilog" Version="7.0.0" />
-		<PackageReference Include="Rebus.ServiceProvider" Version="7.0.0" />
-		<PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
-		<PackageReference Include="Serilog.Sinks.Seq" Version="5.1.1" />
-		<PackageReference Include="SqlKata.Execution" Version="2.3.7" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
+		<PackageReference Include="Rebus.ServiceProvider" Version="8.4.0" />
+		<PackageReference Include="Sentry.Serilog" Version="3.26.1" />
+		<PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
+		<PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
+		<PackageReference Include="Serilog.Enrichers.Process" Version="2.0.2" />
+		<PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
+		<PackageReference Include="Serilog.Sinks.Loggly" Version="5.4.0" />
+		<PackageReference Include="Serilog.Sinks.Seq" Version="5.2.2" />
+		<PackageReference Include="SqlKata.Execution" Version="2.4.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	</ItemGroup>
 
 	<ItemGroup>
