--- a/src/TaskManager.WebApi/appsettings.json
+++ b/src/TaskManager.WebApi/appsettings.json
@@ -20,6 +20,11 @@
       "ServiceName": "Task Manager API",
       "ServiceVersion": "1.0.0"
     },
+    "Swagger": {
+      "Title": "Task Manager API",
+      "Version": "1.0.0",
+      "Url": "/swagger/v1/swagger.json"
+    },
     "DbConnectionString": "Server=localhost,1033;Database=TaskManager;User ID=sa;Password=Sqlserver123$;MultipleActiveResultSets=true;",
     "Cors": {
       "localhost": [
