--- a/src/TaskManager.WebApi/TaskManager.WebApi.csproj
+++ b/src/TaskManager.WebApi/TaskManager.WebApi.csproj
@@ -11,6 +11,7 @@
 
 	<ItemGroup>
 		<InternalsVisibleTo Include="TaskManager.Tests" />
+		<RuntimeHostConfigurationOption Include="Azure.Experimental.EnableActivitySource" Value="true" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
 	</ItemGroup>
 
